<resources>
    <string name="app_name" translatable="false">MobileAppDevFinalWallet</string>

    <string name="account_prompt">To/from account</string>
    <string name="category_prompt">Select category</string>
    <string name="back_icon">Back Icon</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="enter_amount">Enter amount</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="save_this_transaction">Save this transaction</string>
    <string name="add_note">Add note</string>
    <string name="choose_day">Choose day</string>
    <string name="account_management">Account Management</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_account_sign_up">Don\'t have account ? Sign up</string>
    <string name="login2">Login</string>
    <string name="register">Register</string>
    <string name="username2">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="password2">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register2">Register</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="user_name">User Name</string>
    <string name="current_balance">Current Balance</string>
    <string name="vnd">***** VND</string>
    <string name="see_current_balance">See current balance</string>
    <string name="services">Services</string>
    <string name="top_up">Top Up</string>
    <string name="transfer">Transfer</string>
    <string name="history">History</string>
    <string name="news">News</string>
    <string name="account">Account</string>
    <string name="analysis">Analysis</string>
    <string name="export">Export</string>
    <string name="atm_s">ATM(s)</string>
    <string name="transaction_history">Transaction History</string>
    <string name="username3">Username</string>
    <string name="available_balance">Available Balance</string>
    <string name="search_by_categories">Search by Categories</string>
    <string name="recent">Recent</string>
    <string name="blank_vnd">" VND"</string>
    <string name="failed_to_load_transactions">Failed to load transactions</string>
    <string name="category">category</string>
    <string name="amount">amount</string>
    <string name="date">date</string>
    <string name="search_by">"Search By "</string>
    <string name="failed_to_read_value">Failed to read value.</string>
    <string name="csv_exported_successfully_to_downloads">CSV exported successfully to Downloads.</string>
    <string name="failed_to_create_csv_file">Failed to create CSV file.</string>
    <string name="error_exporting_csv">"Error exporting CSV: "</string>
    <string name="storage_permission_granted">Storage Permission Granted</string>
    <string name="storage_permission_denied">Storage Permission Denied</string>
    <string name="cancel">Cancel</string>
    <string name="top_up2">Top Up</string>
    <string name="failed_to_save_transaction">Failed to save transaction</string>
    <string name="transaction_from_topup_saved">Transaction from TopUp saved!</string>
    <string name="bank">Bank</string>
    <string name="top_up3">Top Up</string>
    <string name="from_top_up">From Top Up</string>
    <string name="top_up4">Top Up</string>
    <string name="top_up5">Top Up</string>
    <string name="income1">"INCOME, "</string>
    <string name="expense1">"EXPENSE. "</string>
    <string name="category1">"Category: "</string>
    <string name="amount1">", Amount: "</string>
    <string name="transaction_saved">Transaction Saved</string>
    <string name="transaction_notifications">transaction_notifications</string>
    <string name="failed_to_read_value1">Failed to read value.</string>
    <string name="account_details">Account Details</string>
    <string name="username1">UserName</string>
    <string name="star">*****</string>
    <string name="see_remaining_balance">see remaining balance</string>
    <string name="logout">Logout</string>
    <string name="_5_000_000_vnd">5,000,000 VND</string>
    <string name="total_spending_for_the_whole_month">Total spending for the whole month</string>
    <string name="create_new_transfer">Create New Transfer +</string>
    <string name="quick_transfer">Quick Transfer</string>
    <string name="summary">Summary</string>
    <string name="this_is_the_paragraph_for_the_summary_summary_will_tell_the_user_in_which_week_the_expense_is_highest_and_in_which_week_the_income_is_highest">This is the paragraph for the summary. Summary will tell the user, in which week, the expense is highest and in which week the income is highest.</string>
    <string name="balance_calculation">Balance Calculation</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="_500_000_vnd">500,000 VND</string>
    <string name="total_income">Total Income</string>
    <string name="_1_500_000_vnd">1,500,000 VND</string>
    <string name="standard">Standard</string>
    <string name="specific">Specific</string>
    <string name="monthly_analysis">Monthly Analysis</string>
    <string name="failed_to_read_value2">Failed to read value.</string>
    <string name="you_got_more_money_then_you_spend_well_done_do_it_like_this_next_months_too">You got more money then you spend! Well done! Do it like this next months too.</string>
    <string name="you_are_spending_too_much_your_income_is_lower_then_your_spending_please_reconsider_before_you_spend">You are spending too much. Your income is lower then your spending. Please reconsider before you spend!</string>
    <string name="what_a_coincidence_your_income_and_your_expenses_are_the_same">What a coincidence! Your income and your expenses are the same!</string>
    <string name="home">Home</string>
    <string name="account1">Account</string>
    <string name="calculator">Calculator</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="updates">Updates</string>

    <string name="on">On</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="del">DEL</string>
    <string name="off">Off</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="ac">AC</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_3">3</string>

    <string name="add_account">Add Account...</string>
    <string name="select_a_category">Select a category</string>
    <string name="select_an_account">Select an account</string>
    <string name="add_category">Add Category...</string>
    <string name="please_fill_in_all_fields">Please fill in all fields</string>
    <string name="expense_amount_exceeds_the_current_balance">Expense amount exceeds the current balance.</string>
    <string name="cash">Cash</string>
    <string name="food">Food</string>
    <string name="transport">Transport</string>
    <string name="shopping">Shopping</string>
    <string name="add">Add</string>
    <string name="english">English</string>
    <string name="burmese">Burmese</string>
    <string name="vietnamese">Vietnamese</string>
</resources>