<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view"
    android:layout_gravity="start"

    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home"
            />
        <item
            android:id="@+id/nav_infor"
            android:icon="@drawable/baseline_account_box_24"
            android:title="@string/account1"
            />

        <item
            android:id="@+id/nav_cal"
            android:icon="@drawable/baseline_calculate_24"
            android:title="@string/calculator"
            />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/baseline_newspaper_24"
            android:title="@string/news"/>

        <item
            android:id="@+id/nav_theme"
            android:icon="@drawable/baseline_invert_colors_24"
            android:title="@string/theme"
            />

        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/baseline_translate_24"
            android:title="@string/language"
            >

            <menu>
                <item
                    android:id="@+id/nav_english"
                    android:icon="@drawable/baseline_translate_24"
                    android:title="@string/english" />
                <item
                    android:id="@+id/nav_burmese"
                    android:icon="@drawable/baseline_translate_24"
                    android:title="@string/burmese" />
                <item
                    android:id="@+id/nav_vietnamese"
                    android:icon="@drawable/baseline_translate_24"
                    android:title="@string/vietnamese" />
            </menu>

        </item>

        <item
            android:id="@+id/nav_updates"
            android:icon="@drawable/baseline_system_update_24"
            android:title="@string/updates"
            />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/logout"
            />

    </group>
</menu>