<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#19173D">


    <TextView
        android:id="@+id/txtTotalSpending"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/_5_000_000_vnd"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_weight="2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/total_spending_for_the_whole_month"
        android:textColor="#EEEEEE"
        android:textSize="12sp"
        android:layout_weight="1"
        />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pcSpecificAnalysis"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_analysis"
        android:layout_weight="12"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/create_new_transfer"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTransfer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:text="@string/quick_transfer"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:padding="30dp"
        android:background="@drawable/bg_normal_button"
        android:layout_weight="5"
        android:onClick="switchAddTransactionActivity"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="bottom"
        android:paddingBottom="10dp"
        android:layout_weight="8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:textColor="#00D7FF"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/txtSummarySpecific"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_is_the_paragraph_for_the_summary_summary_will_tell_the_user_in_which_week_the_expense_is_highest_and_in_which_week_the_income_is_highest"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="#00D7FF"
            android:layout_gravity="center"
            />

    </LinearLayout>


</LinearLayout>