<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:focusableInTouchMode="true"
    android:background="@color/darkPurple"
    tools:context=".authentications.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="ExtraText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@color/wheatWhite"
            android:textAlignment="center"
            android:textSize="36sp"
            android:layout_marginTop="130dp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="35dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@color/darkPurple"
            app:cardBackgroundColor="@color/darkPurple">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="20sp"
                    android:textColor="@color/wheatWhite" />

                <EditText
                    android:id="@+id/edt_loginName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_fill"
                    android:padding="8dp"
                    android:textColor="@color/darkPurple"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:layout_marginTop="50dp"
                    android:textSize="20sp"
                    android:textColor="@color/wheatWhite" />

                <EditText
                    android:id="@+id/edt_loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_fill"
                    android:inputType="numberPassword"
                    android:padding="8dp"
                    android:textColor="@color/darkPurple"
                    tools:ignore="SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/login2"
                    android:id="@+id/btn_login"
                    android:background="@drawable/bg_normal_button"
                    android:layout_marginTop="100dp"
                    android:textSize="18sp"
                    android:onClick="login"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_account_sign_up"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp"
                    android:textColor="@color/wheatWhite"
                    android:onClick="switchToRegister"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>